--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/sorting-visualizer-2.0/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/sorting-visualizer-2.0/logo192.png"/><link rel="manifest" href="/sorting-visualizer-2.0/manifest.json"/><title>React App</title><script defer="defer" src="/sorting-visualizer-2.0/static/js/main.c6f8e924.js"></script><link href="/sorting-visualizer-2.0/static/css/main.b516e20e.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/sorting-visualizer-2.0/favicon.ico" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://res.cloudinary.com/dlve5g5qi/image/upload/v1649238723/ProjectThumbnails/SortVisualizer.png"
+    />
+    <link rel="apple-touch-icon" href="/sorting-visualizer-2.0/logo192.png" />
+    <link rel="manifest" href="/sorting-visualizer-2.0/manifest.json" />
+    <title>React App</title>
+    <script
+      defer="defer"
+      src="/sorting-visualizer-2.0/static/js/main.c6f8e924.js"
+    ></script>
+    <link
+      href="/sorting-visualizer-2.0/static/css/main.b516e20e.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
